force-app/main/default/objects/ATAK_Internal_Project_Map__mdt/fields/ATAK_Code__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Code__c</fullName>
    <label>ATAK Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
                <default>true</default>
                <label>HR</label>
            </value>
            <value>
                <fullName>RT</fullName>
            </value>
            <value>
                <fullName>NW</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>KMAD</fullName>
            </value>
            <value>
                <fullName>KMBP</fullName>
            </value>
            <value>
                <fullName>KMAP</fullName>
            </value>
            <value>
                <fullName>KMBD</fullName>
            </value>
            <value>
                <fullName>KMEV</fullName>
            </value>
            <value>
                <fullName>VV</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
            </value>
            <value>
                <fullName>SP-</fullName>
            </value>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>MU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>