force-app/main/default/objects/ATAK_Internal_Project_Map__mdt/fields/ATAK_Overrides_After_Sync__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Overrides_After_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATAK Overrides After Sync</label>
    <type>Checkbox</type>
</CustomField>