force-app/main/default/objects/ATAK_Internal_Project_Map__mdt/fields/Performance_Type__c.field-meta.xml
<CustomField>
    <fullName>Performance_Type__c</fullName>
    <label>Performance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absent Hours</fullName>
                <default>true</default>
                <label>Absent Hours</label>
            </value>
            <value>
                <fullName>Frost Delay</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Industrial Accident</fullName>
            </value>
            <value>
                <fullName>Internal Meeting</fullName>
            </value>
            <value>
                <fullName>Machine</fullName>
            </value>
            <value>
                <fullName>Machine Maintenance</fullName>
            </value>
            <value>
                <fullName>Medical Examination</fullName>
            </value>
            <value>
                <fullName>Night Work</fullName>
            </value>
            <value>
                <fullName>Normal Hours</fullName>
            </value>
            <value>
                <fullName>Recup Overtime</fullName>
            </value>
            <value>
                <fullName>Small Leave</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Travel Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>