force-app/main/default/objects/ATAK_Internal_Project_Map__mdt/fields/Project_Code_Indoor__c.field-meta.xml
<CustomField>
    <fullName>Project_Code_Indoor__c</fullName>
    <label>Project Code Indoor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>