force-app/main/default/objects/ATAK_Internal_Project_Map__mdt/fields/Project_Code_Outdoor__c.field-meta.xml
<CustomField>
    <fullName>Project_Code_Outdoor__c</fullName>
    <label>Project Code Outdoor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>